<resources>
    <string name="app_name">Mudate</string>
    <string name="action_settings">Settings</string>
    <string name="actions_new_estate">Anadir nuevo</string>
    <string name="actions_edit_estate">Editar</string>
    <string name="actions_delete_estate">Eliminar</string>

    <string name="main_title">Mudate!</string>
    <string name="button_users">Usuarios</string>
    <string name="button_estate">Inmuebles</string>

    <string name="title_activity_users">Registro</string>
    <string name="label_user_id">ID</string>
    <string name="label_user_name">Nombre</string>
    <string name="label_user_lastname">Apellido</string>
    <string name="label_user_email">Email</string>
    <string name="label_user_address">Direccion</string>
    <string name="label_user_phone">Telefono</string>
    <string name="label_user_cell">Celular</string>

    <string name="title_activity_estate">Datos del Inmueble</string>
    <string name="estate_title">Datos del Inmueble</string>
    <string name="estate_list_title">Lista de Inmuebles</string>
    <string name="label_estate_code">Codigo</string>
    <string name="label_estate_name">Nombre</string>
    <string name="label_estate_address">Direccion</string>
    <string name="label_estate_habited">Habitado</string>
    <string name="label_estate_inhabited">No Habitado</string>
    <string name="label_estate_value">Valor</string>
    <string name="label_estate_type">Tipo</string>
    <string name="label_estate_rooms">Habitaciones</string>
    <string name="label_estate_baths">Banos</string>
    <string name="label_estate_kitchens">Cocinas</string>
    <string name="label_estate_save">Guardar</string>
    <string name="label_estate_cancel">Cancelar</string>

    <string-array name="estate_type_items">
        <item>Casa</item>
        <item>Apartamento</item>
        <item>Estudio</item>
        <item>Bodega</item>
        <item>Local</item>
    </string-array>
    <string name="title_activity_estate_list">Inmueables</string>


    <string name="dialog_eliminar">Desea Eliminar?</string>
    <string name="dialog_positive">SI</string>
    <string name="dialog_negative">NO</string>
    <string name="title_activity_ingreso">Ingreso</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ingreso2">ingreso2</string>
</resources>
